<resources>
    <string name="app_name">智能印章</string>
    <string name="empty" />

    <!--     TITLE      -->
    <string name="HtmlActivity">公共的Html</string>
    <string name="MTabActivity">主页</string>
    <string name="GuideActivity">引导页</string>
    <string name="LoginActivity">登录页</string>
    <string name="RegistActivity">注册页</string>
    <string name="ReSetPassActivity">重置密码</string>
    <string name="ModifyPassActivity">修改密码</string>
    <string name="PhoneVerificationActivity">手机号验证</string>
    <string name="AboutSealActivity">关于印章</string>
    <string name="AboutAppActivity">关于APP</string>
    <string name="UserInfoActivity">用户详情</string>
    <string name="EditInfoActivity">编辑信息</string>
    <string name="LinkWifiActivity">扫码配网</string>
    <string name="LinkSearchActivity">搜索配网</string>
    <string name="DepartmentActivity">部门列表</string>
    <string name="DepartmentAddActivity">添加部门</string>
    <string name="DepartStaffActivity">部门员工导入</string>
    <string name="DepartSealActivity">部门印章导入</string>
    <string name="DepartmentInfoActivity">部门详情</string>
    <string name="DepartChangeNameActivity">修改部门名称</string>
    <!--     TAB       -->
    <string name="tab_title_home">功能</string>
    <string name="tab_title_useSeal">用章</string>
    <string name="tab_title_linkWifi">配网</string>
    <string name="tab_title_mime">我的</string>


    <string name="department_info">部门详情</string>
    <string name="department_add">添加部门</string>
    <string name="department">部门管理</string>
    <string name="department_edit_staff">编辑员工</string>
    <string name="apply_seal_edit_seal">编辑印章</string>
    <string name="apply_seal">申请用章</string>
    <string name="seal_manager">印章管理</string>
    <string name="staff_manager">员工管理</string>
    <string name="department_manager">部门管理</string>
    <string name="apply_progress">申请进度</string>
    <string name="use_record">使用记录</string>
    <string name="nouse_record">未使用</string>
    <string name="apply_check">审批用章</string>
    <string name="search">搜索</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="send_code">发送验证码</string>
    <string name="next">下一步</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="phone_Verification">手机验证</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="reset_pass">重置密码</string>
    <string name="new_user_regist">新用户注册</string>
    <string name="join_zhijian">进入智能印章</string>
    <string name="txt_use_record">使用记录</string>
    <string name="txt_nouse_record">未使用记录</string>
    <string name="txt_apply_progress">申请进度</string>
    <string name="txt_makecopy_my">抄送我的</string>
    <string name="txt_modify_pass">修改密码</string>
    <string name="txt_about_app">关于APP</string>
    <string name="txt_about_device">关于印章</string>
    <string name="txt_exit_logout">退出登录</string>
    <string name="txt_login_desc">“登录”即代表阅读并同意</string>
    <string name="txt_next_desc">“下一步”即代表阅读并同意</string>
    <string name="and">和</string>
    <string name="txt_service_Agreement">《服务协议》</string>
    <string name="txt_secrecy_Agreement">《保密协议》</string>


    <string name="manager_txt">管理</string>
    <string name="manager_staff">管理员工</string>
    <string name="manager_seal">管理印章</string>
    <string name="import_txt">导入</string>
    <string name="import_staff">导入员工</string>
    <string name="import_seal">导入印章</string>
    <string name="department_name">部门名称</string>
    <string name="exit_company">退出公司</string>
    <string name="edit_info_title">编辑资料</string>
    <string name="info_title">我的资料</string>
    <string name="job">职位：</string>
    <string name="user_type">身份：</string>
    <string name="user_company">公司名称：</string>
    <string name="phone_no">手机号格式不正确</string>
    <string name="email_no">邮箱格式不正确</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_pass">请输入密码</string>
    <string name="regis_name">请输入姓名</string>
    <string name="regis_pwd">请输入密码</string>
    <string name="regis_pwd2">请再次输入密码</string>
    <string name="regis_phone">请输入手机号码</string>
    <string name="regis_email">请输入邮箱</string>
    <string name="regis_company">请输入公司名称</string>
    <string name="regis_zhiwu">请输入您的职务</string>
    <string name="regis_gonghao">请输入您的工号</string>
    <string name="regis_ok_pwd">请确认密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="new_pwd_ok">请确认新密码</string>
    <string name="pass_no_the_same_as">两次输入的密码不一致</string>
    <string name="regist_code">请输入验证码</string>
    <string name="wifi_name">请连接 WI-FI 后配网</string>
    <string name="wifi_pass">请输入 WI-FI 密码</string>
    <string name="link_no_five">配网暂不支持5G网络</string>
    <string name="use_seal">盖章</string>
    <string name="select_device">请选择印章</string>
    <string name="use_reason">用章原因</string>
    <string name="use_number">用章次数</string>
    <string name="load_data_ing">正在加载</string>
    <string name="no_data">暂无数据</string>
    <string name="no_net">网络错误</string>
    <string name="no_net_check">网络连接异常</string>
    <string name="net_timeout">请求超时</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="version_code">1.0.0</string>
    <string name="version_name">APP 版本</string>
    <string name="service_Agreement">服务协议</string>
    <string name="secrecy_Agreement">保密协议</string>
    <string name="about_guide">引导页</string>
    <string name="video_desc">视频介绍</string>
    <string name="document_desc">文字介绍</string>
    <string name="seal_version">印章版本</string>
    <string name="new_desc">新功能介绍</string>
    <string name="info_photo">头像</string>
    <string name="info_name">姓名</string>
    <string name="info_phone">电话</string>
    <string name="info_email">邮箱</string>
    <string name="info_zxing">二维码名片</string>
    <string name="info_company">公司</string>
    <string name="info_job">职务</string>
    <string name="info_jobNumber">工号</string>
    <string name="zxing_linkwifi">扫描二维码进行配网</string>
    <string name="link_search_text1">1.印章连接中,尽量使您的手机和印章互相靠近,便于配网成功</string>
    <string name="link_search_text2">2.若配网失败，请检查您的WIFI名称和密码是否正确</string>

    <string name="sms_err_0">未获取验证码</string>
    <string name="sms_err_1">网络错误</string>
    <string name="sms_err_2">请求超时</string>
    <string name="sms_err_3">无效的手机号码</string>
    <string name="sms_err_4">单个设备或同一手机号每天获取验证码默认10次,请明天再次尝试</string>
    <string name="sms_err_5">验证码不正确</string>
    <string name="sms_err_6">验证码超时</string>
    <string name="sms_err_7">两次请求不超过 1 分钟</string>
    <string name="sms_err_8">验证码校验失败</string>
    <string name="sms_err_9">重复验证</string>
    <string name="sms_err_10">验证失败，请稍候重试</string>

</resources>
