<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/app_title_layout" />

        <ImageView
            android:layout_width="251dp"
            android:layout_height="66dp"
            android:layout_marginBottom="@dimen/margin_padding_30dp"
            android:layout_marginTop="@dimen/margin_padding_30dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/about_stamp_logo" />

        <LinearLayout style="@style/layout_white_bg">

            <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MEditText
                android:id="@+id/login_et_phone"
                style="@style/text_white_bg"
                android:background="@color/white"
                android:hint="@string/login_phone"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>

        <LinearLayout style="@style/layout_white_bg">

            <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MEditText
                android:id="@+id/login_et_pass"
                style="@style/text_white_bg"
                android:background="@color/white"
                android:hint="@string/login_pass"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"/>
        </LinearLayout>

        <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MButton
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_45dp"
            android:layout_marginLeft="@dimen/margin_padding_15dp"
            android:layout_marginRight="@dimen/margin_padding_15dp"
            android:layout_marginTop="@dimen/margin_padding_25dp"
            android:background="@drawable/butn_click_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_15dp">

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:id="@+id/login_tv_forgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_pass"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="@dimen/view_size_1dp"
                    android:layout_weight="1" />

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:id="@+id/login_tv_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_regist"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_desc"
                    android:textColor="@color/gray_666"
                    android:textSize="@dimen/text_12sp" />

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:id="@+id/login_tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_service_Agreement"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_12sp" />

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and"
                    android:textColor="@color/gray_666"
                    android:textSize="@dimen/text_12sp" />

                <com.bjzhijian.bluetoothseal.intelligentseal.widgets.MTextView
                    android:id="@+id/login_tv_secrecy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_secrecy_Agreement"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:scaleType="centerCrop"
            android:src="@mipmap/bottom_img_bg" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
